crates/vize_atelier_sfc/src/compile/snapshots/vize_atelier_sfc__compile__tests__let_var_unref.snap
---
source: crates/vize_atelier_sfc/src/compile/tests.rs
expression: result.code.as_str()
---
import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock, unref as _unref } from "vue"

const a = 1

export default {
  __name: 'test',
  setup(__props) {

let b = 2
var c = 3

return (_ctx, _cache) => {
  return (_openBlock(), _createElementBlock("div", null, _toDisplayString(a) + " " + _toDisplayString(_unref(b)) + " " + _toDisplayString(_unref(c)), 1 /* TEXT */))
}
}

}
