crates/vize_atelier_sfc/src/compile/snapshots/vize_atelier_sfc__compile__tests__nested_v_if_no_double_prefix.snap
---
source: crates/vize_atelier_sfc/src/compile/tests.rs
assertion_line: 662
expression: result.code.as_str()
---
import { createVNode as _createVNode, openBlock as _openBlock, createElementBlock as _createElementBlock, createCommentVNode as _createCommentVNode } from "vue";
import { ref } from "vue";
import CodeHighlight from "./CodeHighlight.vue";
export default {
  __name: "anonymous",
  setup(__props) {
    const output = ref(null);
    return (_ctx, _cache) => {
      return output.value ? (_openBlock(), _createElementBlock("div", { key: 0 }, [output.value.preamble ? (_openBlock(), _createElementBlock("div", {
        key: 1,
        class: "preamble"
      }, [_createVNode(CodeHighlight, { code: output.value.preamble }, null, 8, ["code"])])) : _createCommentVNode("v-if", true)])) : _createCommentVNode("v-if", true);
    };
  }
};
