crates/vize_atelier_sfc/src/compile/snapshots/vize_atelier_sfc__compile__tests__non_script_setup_typescript_preserved.snap
---
source: crates/vize_atelier_sfc/src/compile/tests.rs
expression: result.code.as_str()
---

interface Props {
    name: string;
    count?: number;
}

const _sfc_main = {
    name: 'MyComponent',
    props: {
        name: String,
        count: Number
    } as Props,
    setup(props: Props) {
        const message: string = `Hello, ${props.name}!`;
        return { message };
    }
}

import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"

function _sfc_render(_ctx, _cache) {
  return (_openBlock(), _createElementBlock("div", null, _toDisplayString(_ctx.message), 1 /* TEXT */))
}
_sfc_main.render = _sfc_render
export default _sfc_main
