crates/vize_atelier_sfc/src/compile/snapshots/vize_atelier_sfc__compile__tests__non_script_setup_typescript_preserved_when_is_ts.snap
---
source: crates/vize_atelier_sfc/src/compile/tests.rs
assertion_line: 890
expression: result.code.as_str()
---
import { openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"

function _sfc_render(_ctx, _cache) {
  return (_openBlock(), _createElementBlock("div"))
}

interface Props {
    name: string;
}

const _sfc_main = {
    props: {} as Props
}

_sfc_main.render = _sfc_render
export default _sfc_main
