crates/vize_atelier_sfc/src/compile/snapshots/vize_atelier_sfc__compile__tests__normal_script_sfc_ssr_attaches_ssr_render.snap
---
source: crates/vize_atelier_sfc/src/compile/tests.rs
expression: result.code.as_str()
---

function ssrRender(_ctx, _push, _parent, _attrs) {
  _push(`<div>Hello</div>`)
}


const _sfc_main = {
  name: 'HelloSsr'
}

_sfc_main.ssrRender = ssrRender
export default _sfc_main
