crates/vize_atelier_sfc/src/compile/snapshots/vize_atelier_sfc__compile__tests__script_setup_css_v_bind_dedupes_template_unref_import.snap
---
source: crates/vize_atelier_sfc/src/compile/tests.rs
expression: "sfc_compile_snapshot(&descriptor.css_vars, &result)"
---
css vars:
- color

css:
.box[data-v-test]{
  color: var(--test-color);
}


code:
import { useCssVars as _useCssVars } from 'vue'
import { openBlock as _openBlock, createElementBlock as _createElementBlock, toDisplayString as _toDisplayString, unref as _unref } from "vue"


const _hoisted_1 = { class: "box" }

export default {
  __name: 'Box',
  setup(__props) {

let color = 'tomato'
_useCssVars((_ctx) => ({
  "test-color": (_unref(color))
}))

return (_ctx, _cache) => {
  return (_openBlock(), _createElementBlock("div", _hoisted_1, _toDisplayString(_unref(color))))
}
}

}
