crates/vize_atelier_sfc/src/compile/snapshots/vize_atelier_sfc__compile__tests__script_setup_css_v_bind_handles_quoted_parentheses.snap
---
source: crates/vize_atelier_sfc/src/compile/tests.rs
expression: "sfc_compile_snapshot(&descriptor.css_vars, &result)"
---
css vars:
- parentBg ?? 'var(--bg)'
- Math.min(100, textCountPercentage) + '%'

css:
.header[data-v-test]{
  background-color: color(from var(--test-parentBg\ \?\?\ \'var\(--bg\)\') srgb r g b / 0.85);
}

.textCountGraph {
  background-image: conic-gradient(
    var(--countColor) 0% var(--test-Math\.min\(100\,\ textCountPercentage\)\ \+\ \'\%\'),
    rgba(0, 0, 0, .2) var(--test-Math\.min\(100\,\ textCountPercentage\)\ \+\ \'\%\') 100%
  );
}


code:
import { useCssVars as _useCssVars, unref as _unref } from 'vue'
import { openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"


const _hoisted_1 = { class: "root" }
const parentBg = 'red'
const textCountPercentage = 64

export default {
  __name: 'Box',
  setup(__props) {

_useCssVars((_ctx) => ({
  "test-parentBg\ \?\?\ \'var\(--bg\)\'": (parentBg ?? 'var(--bg)'),
  "test-Math\.min\(100\,\ textCountPercentage\)\ \+\ \'\%\'": (Math.min(100, textCountPercentage) + '%')
}))

return (_ctx, _cache) => {
  return (_openBlock(), _createElementBlock("div", _hoisted_1, "Box"))
}
}

}
