crates/vize_atelier_sfc/src/compile/snapshots/vize_atelier_sfc__compile__tests__script_setup_css_v_bind_reads_define_props.snap
---
source: crates/vize_atelier_sfc/src/compile/tests.rs
expression: "sfc_compile_snapshot(&descriptor.css_vars, &result)"
---
css vars:
- color
- offset + 'px'

css:
.QgAX8G_root {
  background: linear-gradient(180deg,
    color(from var(--test-color) srgb r g b / .1),
    color(from var(--test-color) srgb r g b / 0));
  padding-top: var(--test-offset\ \+\ \'px\');
}


code:
import { useCssVars as _useCssVars } from "vue";
import { useCssModule as _useCssModule } from "vue";
import { resolveDirective as _resolveDirective, withDirectives as _withDirectives, createElementVNode as _createElementVNode, normalizeClass as _normalizeClass, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue";
export default {
  __name: "MkFeatureBanner",
  props: {
    icon: {
      type: String,
      required: true
    },
    color: {
      type: String,
      required: true
    },
    offset: {
      type: Number,
      required: true
    }
  },
  setup(__props) {
    const $style = _useCssModule();
    _useCssVars((_ctx) => ({
      "test-color": __props.color,
      "test-offset + 'px'": __props.offset + "px"
    }));
    return (_ctx, _cache) => {
      const _directive_panel = _resolveDirective("panel");
      return _withDirectives((_openBlock(), _createElementBlock(
        "div",
        { class: _normalizeClass($style.root) },
        [_createElementVNode("img", { src: __props.icon }, null, 8, ["src"])],
        2
        /* CLASS */
      )), [[_directive_panel]]);
    };
  }
};
