crates/vize_atelier_sfc/src/compile/snapshots/vize_atelier_sfc__compile__tests__script_setup_css_v_bind_reads_destructured_prop_aliases.snap
---
source: crates/vize_atelier_sfc/src/compile/tests.rs
expression: "sfc_compile_snapshot(&descriptor.css_vars, &result)"
---
css vars:
- bannerColor

css:
.root[data-v-test]{
  color: var(--test-bannerColor);
}


code:
import { useCssVars as _useCssVars } from "vue";
import { openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue";
const _hoisted_1 = {
  class: "root",
  "data-v-test": ""
};
export default {
  __name: "Alias",
  props: { color: { type: String } },
  setup(__props) {
    _useCssVars((_ctx) => ({ "test-bannerColor": __props.color }));
    return (_ctx, _cache) => {
      return _openBlock(), _createElementBlock("div", _hoisted_1);
    };
  }
};
